@@ -9,30 +9,37 @@ package org.elasticsearch.xpack.esql.expression.function.aggregate;
 
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
-import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.compute.aggregation.AggregatorFunctionSupplier;
 import org.elasticsearch.compute.aggregation.PercentileDoubleAggregatorFunctionSupplier;
 import org.elasticsearch.compute.aggregation.PercentileIntAggregatorFunctionSupplier;
 import org.elasticsearch.compute.aggregation.PercentileLongAggregatorFunctionSupplier;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
+import org.elasticsearch.xpack.esql.core.expression.Literal;
 import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
 import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.core.type.DataType;
+import org.elasticsearch.xpack.esql.expression.SurrogateExpression;
+import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
+import org.elasticsearch.xpack.esql.expression.function.FunctionType;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.expression.function.scalar.convert.ToDouble;
+import org.elasticsearch.xpack.esql.expression.function.scalar.histogram.HistogramPercentile;
+import org.elasticsearch.xpack.esql.expression.function.scalar.multivalue.MvPercentile;
 import org.elasticsearch.xpack.esql.io.stream.PlanStreamInput;
-import org.elasticsearch.xpack.esql.io.stream.PlanStreamOutput;
 
 import java.io.IOException;
 import java.util.List;
 
+import static java.util.Collections.singletonList;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.FIRST;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.SECOND;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isFoldable;
-import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isNumeric;
+import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isNotNull;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isType;
+import static org.elasticsearch.xpack.esql.expression.Foldables.doubleValueOf;
 
-public class Percentile extends NumericAggregate {
+public class Percentile extends NumericAggregate implements SurrogateExpression {
     public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(
         Expression.class,
         "Percentile",
@@ -42,28 +49,52 @@ public class Percentile extends NumericAggregate {
     private final Expression percentile;
 
     @FunctionInfo(
-        returnType = { "double", "integer", "long" },
-        description = "The value at which a certain percentage of observed values occur.",
-        isAggregation = true
+        returnType = "double",
+        description = "Returns the value at which a certain percentage of observed values occur. "
+            + "For example, the 95th percentile is the value which is greater than 95% of the "
+            + "observed values and the 50th percentile is the `MEDIAN`.",
+        appendix = """
+            ### `PERCENTILE` is (usually) approximate [esql-percentile-approximate]
+
+            :::{include} /reference/aggregations/_snippets/search-aggregations-metrics-percentile-aggregation-approximate.md
+            :::
+
+            ::::{warning}
+            `PERCENTILE` is also {wikipedia}/Nondeterministic_algorithm[non-deterministic].
+            This means you can get slightly different results using the same data.
+            ::::""",
+        type = FunctionType.AGGREGATE,
+        examples = {
+            @Example(file = "stats_percentile", tag = "percentile"),
+            @Example(
+                description = "The expression can use inline functions. For example, to calculate a percentile "
+                    + "of the maximum values of a multivalued column, first use `MV_MAX` to get the "
+                    + "maximum value per row, and use the result with the `PERCENTILE` function",
+                file = "stats_percentile",
+                tag = "docsStatsPercentileNestedExpression"
+            ), }
     )
     public Percentile(
         Source source,
-        @Param(name = "number", type = { "double", "integer", "long" }) Expression field,
+        @Param(name = "number", type = { "double", "integer", "long", "exponential_histogram", "tdigest" }) Expression field,
         @Param(name = "percentile", type = { "double", "integer", "long" }) Expression percentile
     ) {
-        super(source, field, List.of(percentile));
+        this(source, field, Literal.TRUE, NO_WINDOW, percentile);
+    }
+
+    public Percentile(Source source, Expression field, Expression filter, Expression window, Expression percentile) {
+        super(source, field, filter, window, singletonList(percentile));
         this.percentile = percentile;
     }
 
     private Percentile(StreamInput in) throws IOException {
-        this(Source.readFrom((PlanStreamInput) in), ((PlanStreamInput) in).readExpression(), ((PlanStreamInput) in).readExpression());
-    }
-
-    @Override
-    public void writeTo(StreamOutput out) throws IOException {
-        Source.EMPTY.writeTo(out);
-        ((PlanStreamOutput) out).writeExpression(children().get(0));
-        ((PlanStreamOutput) out).writeExpression(children().get(1));
+        this(
+            Source.readFrom((PlanStreamInput) in),
+            in.readNamedWriteable(Expression.class),
+            in.readNamedWriteable(Expression.class),
+            readWindow(in),
+            in.readNamedWriteableCollectionAsList(Expression.class).getFirst()
+        );
     }
 
     @Override
@@ -73,12 +104,17 @@ public class Percentile extends NumericAggregate {
 
     @Override
     protected NodeInfo<Percentile> info() {
-        return NodeInfo.create(this, Percentile::new, field(), percentile);
+        return NodeInfo.create(this, Percentile::new, field(), filter(), window(), percentile);
     }
 
     @Override
     public Percentile replaceChildren(List<Expression> newChildren) {
-        return new Percentile(source(), newChildren.get(0), newChildren.get(1));
+        return new Percentile(source(), newChildren.get(0), newChildren.get(1), newChildren.get(2), newChildren.get(3));
+    }
+
+    @Override
+    public Percentile withFilter(Expression filter) {
+        return new Percentile(source(), field(), filter, window(), percentile);
     }
 
     public Expression percentile() {
@@ -93,34 +129,55 @@ public class Percentile extends NumericAggregate {
 
         TypeResolution resolution = isType(
             field(),
-            dt -> dt.isNumeric() && dt != DataType.UNSIGNED_LONG,
+            dt -> (dt.isNumeric() && dt != DataType.UNSIGNED_LONG) || dt == DataType.EXPONENTIAL_HISTOGRAM || dt == DataType.TDIGEST,
             sourceText(),
             FIRST,
-            "numeric except unsigned_long"
+            "exponential_histogram, tdigest or numeric except unsigned_long"
         );
         if (resolution.unresolved()) {
             return resolution;
         }
 
-        return isNumeric(percentile, sourceText(), SECOND).and(isFoldable(percentile, sourceText(), SECOND));
+        return isType(
+            percentile,
+            dt -> dt.isNumeric() && dt != DataType.UNSIGNED_LONG,
+            sourceText(),
+            SECOND,
+            "numeric except unsigned_long"
+        ).and(isFoldable(percentile, sourceText(), SECOND)).and(isNotNull(percentile, sourceText(), SECOND));
     }
 
     @Override
-    protected AggregatorFunctionSupplier longSupplier(List<Integer> inputChannels) {
-        return new PercentileLongAggregatorFunctionSupplier(inputChannels, percentileValue());
+    protected AggregatorFunctionSupplier longSupplier() {
+        return new PercentileLongAggregatorFunctionSupplier(percentileValue());
     }
 
     @Override
-    protected AggregatorFunctionSupplier intSupplier(List<Integer> inputChannels) {
-        return new PercentileIntAggregatorFunctionSupplier(inputChannels, percentileValue());
+    protected AggregatorFunctionSupplier intSupplier() {
+        return new PercentileIntAggregatorFunctionSupplier(percentileValue());
     }
 
     @Override
-    protected AggregatorFunctionSupplier doubleSupplier(List<Integer> inputChannels) {
-        return new PercentileDoubleAggregatorFunctionSupplier(inputChannels, percentileValue());
+    protected AggregatorFunctionSupplier doubleSupplier() {
+        return new PercentileDoubleAggregatorFunctionSupplier(percentileValue());
     }
 
-    private int percentileValue() {
-        return ((Number) percentile.fold()).intValue();
+    private double percentileValue() {
+        return doubleValueOf(percentile(), source().text(), "Percentile");
+    }
+
+    @Override
+    public Expression surrogate() {
+        var field = field();
+        DataType fieldType = field.dataType();
+
+        if (fieldType == DataType.EXPONENTIAL_HISTOGRAM || fieldType == DataType.TDIGEST) {
+            return new HistogramPercentile(source(), new HistogramMerge(source(), field, filter(), window()), percentile());
+        }
+        if (field.foldable()) {
+            return new MvPercentile(source(), new ToDouble(source(), field), percentile());
+        }
+
+        return null;
     }
 }
